[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'ridgeline'
version = '0.1.0'

[dependencies]
rustfft = '6'

[dependencies.cpal]
optional = true
version = '0.13'

[dependencies.thiserror]
optional = true
version = '1'

[features]
default = ['input']
input = ['cpal', 'thiserror']
