[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = ['multimedia::audio', 'science']
description = 'Simple frequency spectrum analysis'
documentation = 'https://docs.rs/ridgeline'
edition = '2018'
keywords = ['signal', 'processing', 'fft', 'dsp', 'audio']
license = 'MIT'
name = 'ridgeline'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/ridgeline'
version = '0.2.0'

[dependencies]
rustfft = '6'

[dependencies.cpal]
optional = true
version = '0.13'

[dependencies.thiserror]
optional = true
version = '1'

[features]
default = ['input']
input = ['cpal', 'thiserror']
